--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_USER = 'Pizzas',
-DB_PASSWORD = 'Pizzas',
-DB_SERVER = 'A-PHZ2-AMI-018',
-DB_NAME = 'dai-pizza'
+DB_USER="Pizzas"
+DB_PASSWORD="Pizzas"
+DB_SERVER="localhost"
+DB_NAME="dai-pizza"
